Using factory method instead of constructor call